# dreamteam

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
agents/: bmad-mapping.md
agents/default/: _template.md  architect.md  backend.md  cost_optimizer.md  database.md  devops.md  documentation.md  frontend.md  memory.md  planner.md  (+7 more)
alembic/: env.py
config/: cost_tiers.yaml  providers.yaml  system_defaults.yaml
docs/: GUIA-DE-USO.md
memory/: architecture.md  standards.md
src/: __init__.py  config.py  logging_config.py  main.py  settings.py
tests/: conftest.py  test_agent_loader_paths.py  test_agent_parser.py  test_agents_bundle_dir.py  test_api.py  test_artifact_writer.py  test_bmad_skills.py  test_datetime_display.py  test_demand_parser.py  test_instructions_loader.py  test_magic.py  test_matcher_qa.py  test_model_router.py  test_output_validation.py  test_plugins_registry.py  test_project_metadata.py  test_project_service.py  test_prompt_builder.py  test_provider_fallback.py  test_provider_registry.py  test_provision_hook.py  test_provisioner.py  test_provisioner_windows.py  test_qa_gate.py  test_qa_output_schema.py  test_qa_routing.py  test_qa_runner.py  test_recovery_node.py  test_recovery_routing.py  test_review_gate.py  test_runner_resources.py  test_scaffold_validator.py  test_skills_loader.py  test_stack_detector.py  test_task_progress.py  test_task_reconciliation.py  test_team_matcher.py  test_timeline_estimator.py  test_work_your_magic_reuse.py
workflows/: bugfix.yaml  new-feature.yaml  refactor.yaml
(+101 files in other folders)
